--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 class="text-uppercase"
                 style="font-family: 'EB Garamond', serif"
               >
-                NOSSA MARCA teste
+                NOSSA MARCA
               </h1>
               <p
                 class=""
