--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </nav>
     </header>
 
-    <main class="bg-black">
+    <main style="background-color: black">
       <!-- IMAGEM DE FUNDO PRINCIPAL -->
       <div class="img-corte"></div>
 
