ajustando NavBar e Edição na foto principal.

--- a/galeria.html
+++ b/galeria.html
@@ -31,7 +31,10 @@
   <body>
     <!-- Navegação do Site -->
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark bg-black fixed-top"
+        id="fixar-nav"
+      >
         <div class="container-fluid">
           <a class="navbar-brand img-fluid" href="index.html"
             ><img
@@ -45,14 +48,14 @@
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
+            data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a
@@ -311,12 +314,12 @@
         "
       >
         © 2023 Copyright:
-        <a class="text-white" href="index.html">NiceBarber.com</a>
+        <a class="text-white" href="index.html">NiceBarber.com.br</a>
         <br />
         Criador:
         <a
           class="text-white"
-          href=""
+          href="https://www.linkedin.com/in/victor-hugo-gutierrez/"
           style="text-decoration: none"
           target="_blank"
           >Victor Hugo Gutierrez</a
