--- a/galeria.html
+++ b/galeria.html
@@ -117,8 +117,8 @@
     </header>
 
     <!-- Galeria de Fotos -->
-    <main class="bg-black">
-      <div class="row mx-3 mt-3">
+    <main style="background-color: black" id="ajustar-fixed">
+      <div class="row mx-3 pt-3">
         <div class="col-lg-4 col-md-12 mb-lg-0">
           <img
             class="img-fluid shadow-1-strong rounded mb-3"
