--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </nav>
     </header>
 
-    <main style="background-color: black">
+    <main style="background-color: black" id="ajustar-fixed">
       <!-- IMAGEM DE FUNDO PRINCIPAL -->
       <div class="img-corte"></div>
 
@@ -254,7 +254,7 @@
       </div>
 
       <!-- SERVIÇOS -->
-      <div class="album py-3 bg-black" id="servicos">
+      <div class="album py-3 bg-black">
         <div class="container">
           <h1
             class="text-uppercase text-white m-3"
